# OOP_labs

./: lab1.cpp
lab1/: CMakeLists.txt  lab1_1.cpp  logic.cpp  logic.h  tests01.cpp
lab2/: CMakeLists.txt  Four.cpp  Four.hpp  main.cpp  test2.cpp
lab3/: CMakeLists.txt  figure.hpp  figures.cpp  figures.hpp  main.cpp  pentagon.cpp  pentagon.hpp  point.cpp  point.hpp  rhombus.cpp  rhombus.hpp  test.cpp  trapezoid.cpp  trapezoid.hpp
lab4/: CMakeLists.txt  figure.hpp  figures.hpp  main.cpp  pentagon.hpp  rhombus.hpp  test.cpp  trapezoid.hpp
lab5/: CMakeCache.txt  CMakeLists.txt  const_iterator.hpp  elf.cpp  factory.cpp  iterator.hpp  list.hpp  main.cpp  npc.cpp  observer.cpp  squirrel.cpp  test.cpp  visitor.cpp
lab6/: CMakeCache.txt  CMakeLists.txt  bandit.cpp  bandit.hpp  elf.hpp  npc.hpp  observer.hpp  squirrel.hpp  test.cpp  test_fight.txt  visitor.hpp
lab7/: CMakeLists.txt  bandit.cpp  bandit.hpp  elf.cpp  elf.hpp  main.cpp  npc.cpp  npc.hpp  observer.hpp  squirrel.cpp  squirrel.hpp  test.cpp  test_fight.txt
